landing page margin/spacing fix

--- a/personalportfolio/src/main/resources/static/css/index.css
+++ b/personalportfolio/src/main/resources/static/css/index.css
@@ -600,7 +600,7 @@ ul {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 10vh 10vw;
+	padding: 7.5vh 7.5vw;
 	gap: 5vh;
 	background: url(images/nasaback.png);
 	/* Inside auto layout */
@@ -608,10 +608,10 @@ ul {
 	order: 1;
 	flex-grow: 0;
 	align-content: center;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
 	background-size: cover;
 	justify-content: space-evenly;
-	height: 115%;
+	height: 125%;
 }
 
 @media(min-width: 1600px){
